here are my changes

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ margin-left: 25%;
 .openLeftNav {
     position: fixed;
     max-width: 200px;
-    width: 100px;
+    width: 120px;
     background-color: orange;
     height: 100vh;
   
@@ -67,4 +67,21 @@ margin-left: 25%;
 .openLeftNav ul li {
     margin-top: 4px;
     
+}
+
+/* to put image in right corner, simulating and ad */
+.top_Right{
+    position: absolute;
+    top: 4%;
+    right: -14%;
+    transform: scale(50%)
+
+}
+.three_Quarters{
+    margin-left: 70%;
+    width:80%;
+    text-align: center;
+    transform: scale(50%);
+    display: block;
+    float: right;
 }
