--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ margin-left: 25%;
 }
 
 .openLeftNav {
+    transition: 150ms;
     position: fixed;
     max-width: 200px;
     width: 120px;
@@ -34,6 +35,7 @@ margin-left: 25%;
 }
 
 .closedLeftNav {
+    transition: ease-in 250ms;
     position: fixed;
     width: 20px;
     background-color: orange;
@@ -41,6 +43,7 @@ margin-left: 25%;
 }
 
 .hidden {
+    transition: 150ms;
     display: none
 }
 
@@ -85,3 +88,26 @@ margin-left: 25%;
     display: block;
     float: right;
 }
+
+
+/*  flex columns rules below */
+
+.flexCols3 {
+    max-width: 75%;
+    margin: 0 auto;
+    margin-top: 40px;
+display: flex;
+flex-shrink: 1;
+flex-grow: 0;
+gap: 40px;
+
+}
+
+.threeWays{
+    margin-top: 40px;
+    color: navy;
+}
+
+/*.flexCols3 h3:nth-of-type(3){
+    white-space: nowrap;
+} */
